--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ table {
     position: absolute;
     left: 50%;
     margin-left: -157px;
-    top: 50px;
+    top: 100px;
 }
 
 table tr:first-child td {
@@ -36,7 +36,7 @@ table tr td:last-child {
 .endgame {
     display: none;
     width: 200px;
-    top: 120px;
+    top: 170px;
     background-color: rgba(205, 133, 63, 0.8);
     position: absolute;
     left: 50%;
@@ -47,4 +47,13 @@ table tr td:last-child {
     border-radius: 5px;
     color: #fff;
     font-size: 2em;
+}
+
+.difficulty {
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
