Change: Cellphone font

--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ td {
     width: 100px;
     text-align: center;
     vertical-align: middle;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Comic Sans MS', 'Indie Flower', cursive;
     font-weight: 100;
-    font-size: 60px;
+    font-size: 62px;
     cursor: url(https://cdn.custom-cursor.com/db/14379/32/color-cherry-pointer.png), pointer;
 }
 
